--- a/src/components/Hello/index.css
+++ b/src/components/Hello/index.css
@@ -1,3 +1,4 @@
+@import '~antd/dist/antd.css';
 .hello {
     text-align: center;
     margin: 20px;
@@ -5,7 +6,7 @@
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
-.hello button {
+.hello button.haha {
     margin-left: 25px;
     margin-right: 25px;
     font-size: 40px;
