--- a/src/components/Hello/index.css
+++ b/src/components/Hello/index.css
@@ -1,4 +1,5 @@
 /*@import '~antd/dist/antd.css';*/
+@import '~antd-mobile/dist/antd-mobile.css';
 .hello {
     text-align: center;
     margin: 20px;
